# blokk-solver

./: .gitignore  README.md  blocks.js  main.py  pyproject.toml
blokk_solver/: _blokk_data.py  blokks.py  combinatorics.py  dev.ipynb  geometry.py  plotting.py  solver.py
pads/: IntegerPartition.py
pipelines/: sampling_pipeline.py
scripts/: generate_all_partitions.py  results_database.py  sample_to_db.py  solve_on_db.py
tests/: test_combinatorics.py  test_geometry.py  test_pipelines.py  test_solver.py
