[project]
name = "blokk_solver"
version = "0.1.0"
description = ""
authors = [
    {name = "Jake Bouma",email = "jake.t.bouma@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "polars (>=1.30.0,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "plotly (>=6.1.1,<7.0.0)",
    "streamlit (>=1.45.1,<2.0.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
jupyter = "^1.1.1"

