[project]
name = "blokk_solver"
version = "0.1.0"
description = ""
authors = [
    {name = "Jake Bouma",email = "jake.t.bouma@gmail.com"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "polars (>=1.30.0,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "plotly (>=6.1.1,<7.0.0)",
    "streamlit (>=1.45.1,<2.0.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "joblib (>=1.5.1,<2.0.0)",
    "duckdb (>=1.3.0,<2.0.0)",
    "poethepoet (>=0.34.0,<0.35.0)",
    "dlt[duckdb] (>=1.12.1,<2.0.0)",
    "enlighten (>=1.14.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
jupyter = "^1.1.1"

[tool.poe.tasks.run_sampling_pipeline]
script = "pipelines.sampling_pipeline:run_pipeline(cube_size=int(cube_size), max_blokk_volume=int(max_blokk_volume))"
help = "🪴 Generate blokk samples and save to duckdb"
args = [
    { name = "cube_size", help = "Only sample blokks with l < cube_size" },
    { name = "max_blokk_volume", help = "Only sample blokks with v < max_blokk_volume" }
]

